--- a/package.json
+++ b/package.json
@@ -6,19 +6,39 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "pnpm prettier pages components tests --write && next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.7",
+    "clsx": "^1.2.1",
+    "graphql": "^16.5.0",
+    "lodash.debounce": "^4.0.8",
     "next": "12.2.0",
+    "next-urql": "^3.3.3",
+    "postcss": "^8.4.14",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.1.4",
+    "urql": "^2.2.2",
+    "zod": "^3.17.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
-    "eslint": "8.19.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.2.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.7.1",
     "typescript": "4.7.4"
   }
 }
