--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.1",
+    "date-fns": "^2.28.0",
     "graphql": "^16.5.0",
     "lodash.debounce": "^4.0.8",
     "next": "12.2.0",
