--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "pnpm prettier pages components tests --write && next lint"
   },
   "dependencies": {
+    "@graphql-codegen/cli": "^2.8.1",
+    "@graphql-codegen/typescript-operations": "^2.5.1",
+    "@graphql-codegen/typescript-urql": "^3.6.1",
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.1",
     "date-fns": "^2.28.0",
     "graphql": "^16.5.0",
+    "init": "^0.1.2",
     "lodash.debounce": "^4.0.8",
+    "lodash.sortby": "^4.7.0",
     "next": "12.2.0",
     "next-urql": "^3.3.3",
     "postcss": "^8.4.14",
