--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^1.2.1",
     "date-fns": "^2.28.0",
     "graphql": "^16.5.0",
+    "highlightjs": "^9.16.2",
     "init": "^0.1.2",
     "lodash.debounce": "^4.0.8",
     "lodash.orderby": "^4.6.0",
@@ -31,6 +32,7 @@
     "zod": "^3.17.3"
   },
   "devDependencies": {
+    "@types/highlightjs": "^9.12.2",
     "@types/lodash": "^4.14.182",
     "@types/lodash.debounce": "^4.0.7",
     "@types/lodash.orderby": "^4.6.7",
@@ -47,6 +49,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "postcss-import": "^14.1.0",
     "prettier": "^2.7.1",
     "typescript": "4.7.4"
   }
