--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@graphql-codegen/cli": "^2.8.1",
     "@graphql-codegen/typescript-operations": "^2.5.1",
     "@graphql-codegen/typescript-urql": "^3.6.1",
+    "@urql/devtools": "^2.0.3",
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.1",
     "date-fns": "^2.28.0",
