--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@graphql-codegen/typescript-operations": "^2.5.1",
     "@graphql-codegen/typescript-urql": "^3.6.1",
     "@urql/devtools": "^2.0.3",
+    "@urql/exchange-graphcache": "^4.4.3",
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.1",
     "date-fns": "^2.28.0",
