--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@graphql-codegen/cli": "^2.8.1",
     "@graphql-codegen/typescript-operations": "^2.5.1",
     "@graphql-codegen/typescript-urql": "^3.6.1",
+    "@headlessui/react": "^1.6.6",
     "@urql/devtools": "^2.0.3",
     "@urql/exchange-graphcache": "^4.4.3",
+    "@urql/exchange-retry": "^0.3.3",
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.1",
     "date-fns": "^2.28.0",
