--- a/codegen.yml
+++ b/codegen.yml
@@ -2,7 +2,7 @@ overwrite: true
 schema:
   - "https://api.github.com/graphql":
       headers:
-        Authorization: bearer ${GITHUB_TOKEN}
+        Authorization: bearer ${NEXT_PUBLIC_GITHUB_TOKEN}
 documents:
   - pages/**/*.tsx
   - components/**/*.tsx
