--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "zod": "^3.17.3"
   },
   "devDependencies": {
+    "@graphql-codegen/schema-ast": "^2.5.0",
     "@types/highlightjs": "^9.12.2",
     "@types/lodash": "^4.14.182",
     "@types/lodash.debounce": "^4.0.7",
