--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "tailwindcss": "^3.1.4",
-    "urql": "^2.2.2",
-    "zod": "^3.17.3"
+    "urql": "^2.2.2"
   },
   "devDependencies": {
     "@graphql-codegen/schema-ast": "^2.5.0",
