--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "pnpm prettier pages components tests --write && next lint",
+    "lint": "pnpm prettier pages components --write && next lint",
     "codegen": "DOTENV_CONFIG_PATH=\"./.env.local\" graphql-codegen --require dotenv/config --config codegen.yml"
   },
   "dependencies": {
@@ -57,6 +57,10 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "postcss-import": "^14.1.0",
     "prettier": "^2.7.1",
+    "simple-git-hooks": "^2.8.0",
     "typescript": "4.7.4"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint"
   }
 }
