--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,20 @@
   "extends": [
     "next/core-web-vitals",
     "prettier"
+  ],
+  "plugins": [
+    "testing-library"
+  ],
+  "overrides": [
+    // Only uses Testing Library lint rules in test files
+    {
+      "files": [
+        "**/__tests__/**/*.[jt]s?(x)",
+        "**/?(*.)+(spec|test).[jt]s?(x)"
+      ],
+      "extends": [
+        "plugin:testing-library/react"
+      ]
+    }
   ]
 }
