--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "pnpm prettier pages components lib --write && next lint",
-    "codegen": "DOTENV_CONFIG_PATH=\"./.env.local\" graphql-codegen --require dotenv/config --config codegen.yml"
+    "lint": "pnpm prettier pages components lib __tests__ --write && next lint",
+    "codegen": "DOTENV_CONFIG_PATH=\"./.env.local\" graphql-codegen --require dotenv/config --config codegen.yml",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@graphql-codegen/cli": "^2.8.1",
     "@graphql-codegen/typescript-operations": "^2.5.1",
     "@graphql-codegen/typescript-urql": "^3.6.1",
     "@headlessui/react": "^1.6.6",
+    "@playwright/test": "^1.25.0",
     "@urql/devtools": "^2.0.3",
     "@urql/exchange-graphcache": "^4.4.3",
     "@urql/exchange-retry": "^0.3.3",
@@ -37,8 +39,13 @@
     "urql": "^2.2.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.4.0",
     "@graphql-codegen/schema-ast": "^2.5.0",
+    "@mswjs/data": "^0.10.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
     "@types/highlightjs": "^9.12.2",
+    "@types/jest": "^28.1.7",
     "@types/lodash": "^4.14.182",
     "@types/lodash.debounce": "^4.0.7",
     "@types/lodash.orderby": "^4.6.7",
@@ -55,6 +62,11 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-testing-library": "^5.6.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "msw": "^0.44.2",
+    "playwright": "^1.25.0",
     "postcss-import": "^14.1.0",
     "prettier": "^2.7.1",
     "simple-git-hooks": "^2.8.0",
@@ -62,5 +74,8 @@
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
