--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "pnpm prettier pages components lib __tests__ --write && next lint",
     "codegen": "DOTENV_CONFIG_PATH=\"./.env.local\" graphql-codegen --require dotenv/config --config codegen.yml",
     "test": "jest --watch",
-    "e2e": "playwright test",
+    "test:e2e": "playwright test",
     "analyze": "cross-env ANALYZE=true next build",
     "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
     "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
