--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "eslint-plugin-testing-library": "^5.6.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
+    "lint-staged": "^13.0.3",
     "msw": "^0.44.2",
     "playwright": "^1.25.0",
     "postcss-import": "^14.1.0",
@@ -80,8 +81,14 @@
     "simple-git-hooks": "^2.8.0",
     "typescript": "4.7.4"
   },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write",
+      "npx next lint"
+    ]
+  },
   "simple-git-hooks": {
-    "pre-commit": "pnpm prettier pages components lib __tests__ --write && next lint"
+    "pre-commit": "npx lint-staged"
   },
   "msw": {
     "workerDirectory": "public"
