--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,22 @@
     "downlevelIteration": true,
     "types": [
       "jest"
-    ]
+    ],
+    "baseUrl": "./",
+    "paths": {
+      "@components/*": [
+        "components/*"
+      ],
+      "@lib/*": [
+        "lib/*"
+      ],
+      "@pages/*": [
+        "pages/*"
+      ],
+      "@generated/*": [
+        "__generated/*"
+      ]
+    }
   },
   "include": [
     "next-env.d.ts",
