--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -11,10 +11,10 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 'latest'
+          version: "latest"
       - uses: actions/setup-node@v2
         with:
-          node-version: '16.x'
+          node-version: "16.x"
       - name: Install dependencies
         run: pnpm install --frozen-lockfile --ignore-scripts
       - name: Install Playwright
