--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "github-code-viewer",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
     "dev-test": "NEXT_PUBLIC_API_MOCKING=true next dev -p 3005",
@@ -21,6 +21,7 @@
     "@graphql-codegen/typescript-operations": "^2.5.1",
     "@graphql-codegen/typescript-urql": "^3.6.1",
     "@headlessui/react": "^1.6.6",
+    "@mui/base": "5.0.0-alpha.94",
     "@playwright/test": "^1.25.0",
     "@urql/devtools": "^2.0.3",
     "@urql/exchange-graphcache": "^4.4.3",
@@ -51,6 +52,7 @@
     "@next/bundle-analyzer": "^12.2.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
+    "@thoughtbot/tailwindcss-aria-attributes": "^0.2.0",
     "@types/highlightjs": "^9.12.2",
     "@types/jest": "^28.1.7",
     "@types/lodash": "^4.14.182",
