--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@headlessui/react": "^1.6.6",
     "@mui/base": "5.0.0-alpha.94",
     "@playwright/test": "^1.25.0",
+    "@types/dompurify": "^2.3.4",
+    "@types/marked": "^4.0.6",
     "@urql/devtools": "^2.0.3",
     "@urql/exchange-graphcache": "^4.4.3",
     "@urql/exchange-retry": "^0.3.3",
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.1",
     "date-fns": "^2.28.0",
+    "dompurify": "^2.4.0",
     "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
     "highlightjs": "^9.16.2",
@@ -36,6 +39,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.orderby": "^4.6.0",
     "lodash.sortby": "^4.7.0",
+    "marked": "^4.1.0",
     "next": "12.2.0",
     "next-cookies": "^2.0.3",
     "next-urql": "^4.0.0",
@@ -51,6 +55,7 @@
     "@graphql-codegen/schema-ast": "^2.5.0",
     "@mswjs/data": "^0.10.1",
     "@next/bundle-analyzer": "^12.2.5",
+    "@tailwindcss/typography": "^0.5.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@thoughtbot/tailwindcss-aria-attributes": "^0.2.0",
