chore: Prettify files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,6 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "prettier"
-  ],
-  "plugins": [
-    "testing-library"
-  ],
+  "extends": ["next/core-web-vitals", "prettier"],
+  "plugins": ["testing-library"],
   "overrides": [
     // Only uses Testing Library lint rules in test files
     {
@@ -13,9 +8,7 @@
         "**/__tests__/**/*.[jt]s?(x)",
         "**/?(*.)+(spec|test).[jt]s?(x)"
       ],
-      "extends": [
-        "plugin:testing-library/react"
-      ]
+      "extends": ["plugin:testing-library/react"]
     }
   ]
 }
