--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,31 +15,15 @@
     "jsx": "preserve",
     "incremental": true,
     "downlevelIteration": true,
-    "types": [
-      "jest"
-    ],
+    "types": ["jest"],
     "baseUrl": "./",
     "paths": {
-      "@components/*": [
-        "components/*"
-      ],
-      "@lib/*": [
-        "lib/*"
-      ],
-      "@pages/*": [
-        "pages/*"
-      ],
-      "@generated/*": [
-        "__generated/*"
-      ]
+      "@components/*": ["components/*"],
+      "@lib/*": ["lib/*"],
+      "@pages/*": ["pages/*"],
+      "@generated/*": ["__generated/*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
